--- a/aprovado.html
+++ b/aprovado.html
@@ -36,7 +36,7 @@
 
     <div class="produto-detalhes" id="produto-detalhes">
 
-        <form action="https://formspree.io/f/xwkgrorw" id="form-compra" class="form-compra" method="POST">
+        <form action="https://formspree.io/f/myyrbzkn" id="form-compra" class="form-compra" method="POST">
            
             <label id="cadastro">Faça Seu Cadastro !</label>
             <label id="cadastro-sub">Acompanhe todo o Processo de Entrega do seu Ebook pelo seu Email</label>
