--- a/autoajuda.html
+++ b/autoajuda.html
@@ -917,14 +917,14 @@
 
 
     <div class="bloco" id="bloco">
-        <img src="img/7passopleno.png" class="img-fundo" id="img-fundomob">
+        <img src="https://i.postimg.cc/GmwjXJ8Q/7passopleno.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">7 Passos Para O Sucesso Pleno</h2>
         <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '7 Passos Para O Sucesso Pleno', /*nome do produto  - produto.nome*/
             '29,99' ,/* preço do produto - produto.preço*/
-            'https://thumbs2.imgbox.com/2f/75/ByrMEwcK_t.png', /*imagem do produto produto.imagem*/
+            'https://i.postimg.cc/GmwjXJ8Q/7passopleno.png', /*imagem do produto produto.imagem*/
             'Editora: Instituto Aweto', /*detalhes do produto - produto.infor*/
             '100 Páginas',
             'Sem restrição de Idade',
@@ -935,14 +935,14 @@
     </div>
 
     <div class="bloco" id="bloco">
-        <img src="img/dicas8.png" class="img-fundo" id="img-fundomob">
+        <img src="https://i.postimg.cc/jqD99c20/dicas8.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">8 Dicas Para Viver Uma Vida Com Propósito</h2>
         <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '8 Dicas Para Uma Vida Com Propósito', /*nome do produto  - produto.nome*/
             '29,99' ,/* preço do produto - produto.preço*/
-            'https://thumbs2.imgbox.com/ca/ec/sDYeJzsd_t.png', /*imagem do produto produto.imagem*/
+            'https://i.postimg.cc/jqD99c20/dicas8.png', /*imagem do produto produto.imagem*/
             'Editora: Instituto Aweto', /*detalhes do produto - produto.infor*/
             '85 Páginas',
             'Sem restrição de Idade',
@@ -1026,7 +1026,7 @@
         <br>
         +55 11 93498-3223<br>       
         <br> 
-        institutoaweto@aweto.com.br
+        aweto@lojainstitutoaweto.com.br
         </div>
 
         <div class="infor-final" id="infor-final">
