--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@ function addcarro(){
         <br>
         +55 11 93498-3223<br>       
         <br> 
-        institutoaweto@aweto.com.br
+        aweto@lojainstitutoaweto.com.br
         </div>
 
         <div class="infor-final" id="infor-final">
