--- a/religião.html
+++ b/religião.html
@@ -989,7 +989,7 @@
         <br>
         +55 11 93498-3223<br>       
         <br> 
-        institutoaweto@aweto.com.br
+        aweto@lojainstitutoaweto.com.br
         </div>
 
         <div class="infor-final" id="infor-final">
