--- a/gratuitos.html
+++ b/gratuitos.html
@@ -50,7 +50,7 @@
          <div class="fundo-texto-menu">
             <a href="index.html" class="menu-texto">Início</a>
             <a href="religião.html" class="menu-texto">Religião</a>
-            <a href="autoajuda.html" class="menu-texto">Auto Ajuda</a>
+            <a href="autoajuda.html" class="menu-texto">Desenvolvimento Social</a>
             <a href="gratuitos.html" class="menu-texto">Gratuitos</a>
             <a href="todos.html" class="menu-texto">Todos</a> 
          </div>
@@ -66,7 +66,7 @@
     <!--Navegação-->
     <nav>
         <a href="religião.html"><p id="texto-nav" class="clique-menu1">Religião</p></a>
-        <a href="autoajuda.html"><p id="texto-nav" class="clique-menu2">Auto Ajuda</p></a>
+        <a href="autoajuda.html"><p id="texto-nav" class="clique-menu2">Desenvolvimento Social</p></a>
         <a href="gratuitos.html"><p id="texto-nav" class="clique-menu3">Gratuitos</p></a>
         <a href="todos.html"><p id="texto-nav" class="clique-menu4">Todos</p> </a>
         <a href=""><p id="texto-nav" class="clique-menu5"></p> </a>
@@ -88,7 +88,7 @@
 
                 <a href="religião.html"><li class="dados-lupa" id="lista1">Religião</li></a>
 
-                <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Auto Ajuda</li></a>
+                <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Desenvolvimento Social</li></a>
 
                 <a href="gratuitos.html"><li class="dados-lupa">Gratuitos</li></a>
     
@@ -430,7 +430,7 @@
    
             <a href="religião.html"><li class="dados-lupa" id="lista1">Religião</li></a>
 
-            <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Auto Ajuda</li></a>
+            <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Desenvolvimento Social</li></a>
 
             <a href="gratuitos.html"><li class="dados-lupa">Gratuitos</li></a>
 
@@ -777,7 +777,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/433wc4hk/turbinandosuamemoria.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Técnicas para Turbinar a  sua Memória</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"  onclick="adicionarProduto(
             '5 Técnicas para Turbinar a  sua Memória', /*nome do produto  - produto.nome*/
@@ -795,7 +795,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/g0GHWzKL/autoconfian-a.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Maneiras para Melhorar sua Auto Confiança </h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria  Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria  Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '5 Maneiras para Melhorar sua Auto Confiança', /*nome do produto  - produto.nome*/
@@ -831,7 +831,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/qBz5LDfK/smartmockups-luj55rvp.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">Como Se Tornar Um Lider Em Marketing Online</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             'Como Se Tornar Um Lider Em Marketing Online', /*nome do produto  - produto.nome*/
