--- a/todos.html
+++ b/todos.html
@@ -49,7 +49,7 @@
          <div class="fundo-texto-menu">
             <a href="index.html" class="menu-texto">Início</a>
             <a href="religião.html" class="menu-texto">Religião</a>
-            <a href="autoajuda.html" class="menu-texto">Auto Ajuda</a>
+            <a href="autoajuda.html" class="menu-texto">Desenvolvimento Social</a>
             <a href="gratuitos.html" class="menu-texto">Gratuitos</a>
             <a href="todos.html" class="menu-texto">Todos</a> 
          </div>
@@ -65,7 +65,7 @@
     <!--Navegação-->
     <nav>
         <a href="religião.html"><p id="texto-nav" class="clique-menu1">Religião</p></a>
-        <a href="autoajuda.html"><p id="texto-nav" class="clique-menu2">Auto Ajuda</p></a>
+        <a href="autoajuda.html"><p id="texto-nav" class="clique-menu2">Desenvolvimento Social</p></a>
         <a href="gratuitos.html"><p id="texto-nav" class="clique-menu3">Gratuitos</p></a>
         <a href="todos.html"><p id="texto-nav" class="clique-menu4">Todos</p> </a>
         <a href=""><p id="texto-nav" class="clique-menu5"></p> </a>
@@ -87,7 +87,7 @@
 
                 <a href="religião.html"><li class="dados-lupa" id="lista1">Religião</li></a>
 
-                <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Auto Ajuda</li></a>
+                <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Desenvolvimento Social</li></a>
 
                 <a href="gratuitos.html"><li class="dados-lupa">Gratuitos</li></a>
     
@@ -429,7 +429,7 @@
    
             <a href="religião.html"><li class="dados-lupa" id="lista1">Religião</li></a>
 
-            <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Auto Ajuda</li></a>
+            <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Desenvolvimento Social</li></a>
 
             <a href="gratuitos.html"><li class="dados-lupa">Gratuitos</li></a>
 
@@ -765,7 +765,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/L6MRRwrF/felicidade1.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">A Felicidade Começa Com Você</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>   
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             'A Felicidade Começa Com Você', /*nome do produto  - produto.nome*/
@@ -782,7 +782,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/yx0Hcy3G/felicidade2.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">A Felicidade Começa com Você - Livro 2</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>   
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             'A Felicidade Começa Com Você - Livro 2', /*nome do produto  - produto.nome*/
@@ -800,7 +800,7 @@
 
         <img src="https://i.postimg.cc/RhJcRNvy/administra-aodotempo.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">Administração do Tempo</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 19,99</p>      
         <button class="botao-compra" id="botao-compra" onclick="adicionarProduto(
             'Administração Do Tempo', /*nome do produto  - produto.nome*/
@@ -818,7 +818,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/vBkPbRTR/ansiedade.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto"> Superar a Ansiedade</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             'Superar a Ansiedade', /*nome do produto  - produto.nome*/
@@ -836,7 +836,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/g0GHWzKL/autoconfian-a.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Maneiras para Melhorar sua Auto Confiança </h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria  Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria  Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '5 Maneiras para Melhorar sua Auto Confiança', /*nome do produto  - produto.nome*/
@@ -854,7 +854,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/dtdfQ0G5/exito1.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Passos Para Ter Êxito<br> Livro 1</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>     
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '5 Passos Para Ter Êxito', /*nome do produto  - produto.nome*/
@@ -872,7 +872,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/9fXgBtKk/exito2.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Passos Para Ter Êxito<br> Livro 2</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '5 Passos Para Ter Êxito Livro 2', /*nome do produto  - produto.nome*/
@@ -890,7 +890,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/433wc4hk/turbinandosuamemoria.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Técnicas para Turbinar a  sua Memória</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"  onclick="adicionarProduto(
             '5 Técnicas para Turbinar a  sua Memória', /*nome do produto  - produto.nome*/
@@ -908,7 +908,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/GmwjXJ8Q/7passopleno.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">7 Passos Para O Sucesso Pleno</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '7 Passos Para O Sucesso Pleno', /*nome do produto  - produto.nome*/
@@ -926,7 +926,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/jqD99c20/dicas8.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">8 Dicas Para Viver Uma Vida Com Propósito</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '8 Dicas Para Uma Vida Com Propósito', /*nome do produto  - produto.nome*/
@@ -944,7 +944,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/CL86yZxL/smartmockups-luj54smc.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">A Magia Da Linguagem Corporal</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 19,99</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             'A Magia Da Linguagem Corporal', /*nome do produto  - produto.nome*/
@@ -962,7 +962,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/qBz5LDfK/smartmockups-luj55rvp.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">Como Se Tornar Um Lider Em Marketing Online</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             'Como Se Tornar Um Lider Em Marketing Online', /*nome do produto  - produto.nome*/
@@ -980,7 +980,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/6QWtDRtx/smartmockups-lun8c2c9.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">19 Regras Para Se Tornar Um Vencedor</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$19,90</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '19 Regras Para Se Tornar Um Vencedor', /*nome do produto  - produto.nome*/
