--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="shortcut icon" href="img/aweto.png">
+    <link rel="shortcut icon" href="https://i.postimg.cc/8s8LnN55/aweto.png">
     <link rel="stylesheet" media="screen and (max-width:700px)" href="styleCSS/mob/mobile.css">
     <link rel="stylesheet" href="styleCSS/header.css">
     <link rel="stylesheet" href="styleCSS/main.css">
@@ -51,7 +51,7 @@
          <div class="fundo-texto-menu">
             <a href="index.html" class="menu-texto">Início</a>
             <a href="religião.html" class="menu-texto">Religião</a>
-            <a href="autoajuda.html" class="menu-texto">Auto Ajuda</a>
+            <a href="autoajuda.html" class="menu-texto">Desenvolvimento Social</a>
             <a href="gratuitos.html" class="menu-texto">Gratuitos</a>
             <a href="todos.html" class="menu-texto">Todos</a> 
          </div>
@@ -67,7 +67,7 @@
     <!--Navegação-->
     <nav>
         <a href="religião.html"><p id="texto-nav" class="clique-menu1">Religião</p></a>
-        <a href="autoajuda.html"><p id="texto-nav" class="clique-menu2">Auto Ajuda</p></a>
+        <a href="autoajuda.html"><p id="texto-nav" class="clique-menu2">Desenvolvimento Social</p></a>
         <a href="gratuitos.html"><p id="texto-nav" class="clique-menu3">Gratuitos</p></a>
         <a href="todos.html"><p id="texto-nav" class="clique-menu4">Todos</p> </a>
         <a href=""><p id="texto-nav" class="clique-menu5"></p> </a>
@@ -89,7 +89,7 @@
 
                 <a href="religião.html"><li class="dados-lupa" id="lista1">Religião</li></a>
 
-                <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Auto Ajuda</li></a>
+                <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Desenvolvimento Social</li></a>
 
                 <a href="gratuitos.html"><li class="dados-lupa">Gratuitos</li></a>
     
@@ -431,7 +431,7 @@
    
             <a href="religião.html"><li class="dados-lupa" id="lista1">Religião</li></a>
 
-            <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Auto Ajuda</li></a>
+            <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Desenvolvimento Social</li></a>
 
             <a href="gratuitos.html"><li class="dados-lupa">Gratuitos</li></a>
 
@@ -777,7 +777,7 @@
     </div>
 
     <div class="mySlides fade">
-        <img src="https://postimg.cc/bG7SM9qM" id="img-slideshow">
+        <img src="https://i.postimg.cc/rmmGDf38/banner4.jpg" id="img-slideshow">
     </div>
     
      <!-- Next and previous buttons -->
@@ -829,7 +829,7 @@ function addcarro(){
 <!--Categoria um-->
 <article class="produto-categoria" id="categoria-produto">
     <!--Nome Categoria-->
-    <h2 id="nome-categoria">Auto Ajuda</h2>
+    <h2 id="nome-categoria">Desenvolvimento Social</h2>
     <hr id="linha">
 
 </article>
@@ -840,7 +840,7 @@ function addcarro(){
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/L6MRRwrF/felicidade1.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">A Felicidade Começa Com Você</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto"> Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>   
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             'A Felicidade Começa Com Você', /*nome do produto  - produto.nome*/
@@ -857,7 +857,7 @@ function addcarro(){
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/yx0Hcy3G/felicidade2.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">A Felicidade Começa com Você - Livro 2</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto"> Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>   
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             'A Felicidade Começa Com Você - Livro 2', /*nome do produto  - produto.nome*/
@@ -875,7 +875,7 @@ function addcarro(){
 
         <img src="https://i.postimg.cc/RhJcRNvy/administra-aodotempo.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">Administração do Tempo</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto"> Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 19,99</p>      
         <button class="botao-compra" id="botao-compra" onclick="adicionarProduto(
             'Administração Do Tempo', /*nome do produto  - produto.nome*/
@@ -893,7 +893,7 @@ function addcarro(){
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/vBkPbRTR/ansiedade.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto"> Superar a Ansiedade</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             'Superar a Ansiedade', /*nome do produto  - produto.nome*/
@@ -912,7 +912,7 @@ function addcarro(){
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/g0GHWzKL/autoconfian-a.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Maneiras para Melhorar sua Auto Confiança </h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria  Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">  Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '5 Maneiras para Melhorar sua Auto Confiança', /*nome do produto  - produto.nome*/
@@ -930,7 +930,7 @@ function addcarro(){
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/dtdfQ0G5/exito1.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Passos Para Ter Êxito<br> Livro 1</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto"> Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>     
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '5 Passos Para Ter Êxito', /*nome do produto  - produto.nome*/
@@ -948,7 +948,7 @@ function addcarro(){
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/9fXgBtKk/exito2.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Passos Para Ter Êxito<br> Livro 2</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto">Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">R$ 29,99</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '5 Passos Para Ter Êxito Livro 2', /*nome do produto  - produto.nome*/
@@ -966,7 +966,7 @@ function addcarro(){
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/433wc4hk/turbinandosuamemoria.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Técnicas para Turbinar a  sua Memória</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Auto Ajuda</p>
+        <p class="desconto-produto" id="desconto-produto"> Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"  onclick="adicionarProduto(
             '5 Técnicas para Turbinar a  sua Memória', /*nome do produto  - produto.nome*/
@@ -1200,4 +1200,5 @@ function addcarro(){
 <script src="scriptJS/unico.js"></script>
 
 </body>
+
 </html>
