--- a/religião.html
+++ b/religião.html
@@ -49,7 +49,7 @@
          <div class="fundo-texto-menu">
             <a href="index.html" class="menu-texto">Início</a>
             <a href="religião.html" class="menu-texto">Religião</a>
-            <a href="autoajuda.html" class="menu-texto">Auto Ajuda</a>
+            <a href="autoajuda.html" class="menu-texto">Desenvolvimento Social</a>
             <a href="gratuitos.html" class="menu-texto">Gratuitos</a>
             <a href="todos.html" class="menu-texto">Todos</a> 
          </div>
@@ -65,7 +65,7 @@
     <!--Navegação-->
     <nav>
         <a href="religião.html"><p id="texto-nav" class="clique-menu1">Religião</p></a>
-        <a href="autoajuda.html"><p id="texto-nav" class="clique-menu2">Auto Ajuda</p></a>
+        <a href="autoajuda.html"><p id="texto-nav" class="clique-menu2">Desenvolvimento Social</p></a>
         <a href="gratuitos.html"><p id="texto-nav" class="clique-menu3">Gratuitos</p></a>
         <a href="todos.html"><p id="texto-nav" class="clique-menu4">Todos</p> </a>
         <a href=""><p id="texto-nav" class="clique-menu5"></p> </a>
@@ -87,7 +87,7 @@
 
                 <a href="religião.html"><li class="dados-lupa" id="lista1">Religião</li></a>
 
-                <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Auto Ajuda</li></a>
+                <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Desenvolvimento Social</li></a>
 
                 <a href="gratuitos.html"><li class="dados-lupa">Gratuitos</li></a>
     
@@ -429,7 +429,7 @@
    
             <a href="religião.html"><li class="dados-lupa" id="lista1">Religião</li></a>
 
-            <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Auto Ajuda</li></a>
+            <a href="autoajuda.html"><li class="dados-lupa" id="lista1">Desenvolvimento Social</li></a>
 
             <a href="gratuitos.html"><li class="dados-lupa">Gratuitos</li></a>
 
