--- a/gratuitos.html
+++ b/gratuitos.html
@@ -777,7 +777,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/433wc4hk/turbinandosuamemoria.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Técnicas para Turbinar a  sua Memória</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
+        <p class="desconto-produto" id="desconto-produto">Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"  onclick="adicionarProduto(
             '5 Técnicas para Turbinar a  sua Memória', /*nome do produto  - produto.nome*/
@@ -787,7 +787,7 @@
             '400 Páginas', /*Quantidade de pagina*/
             'Sem restrição de Idade', /*Idade*/
             'A DES foi extinta pela Lei nº 15.406/2011. Em substituição, foi criada a Nota Fiscal do Tomador de Serviços (NFTS), que deve ser emitida desde o dia 01/09/2011. Para mais informações, acesse aqui.',
-            'https://mpago.la/2xxKHmM',
+            '',
             )">Comprar</button>
             
     </div>
@@ -795,7 +795,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/g0GHWzKL/autoconfian-a.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">5 Maneiras para Melhorar sua Auto Confiança </h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria  Desenvolvimento Social</p>
+        <p class="desconto-produto" id="desconto-produto">Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             '5 Maneiras para Melhorar sua Auto Confiança', /*nome do produto  - produto.nome*/
@@ -813,7 +813,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/mgy6M6XM/fortalecimento.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">Fortalecimento Espiritual</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria  Religiosos</p>
+        <p class="desconto-produto" id="desconto-produto">Religiosos</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra" onclick="adicionarProduto(
         'Fortalecimento Espiritual', /*nome do produto  - produto.nome*/
@@ -831,7 +831,7 @@
     <div class="bloco" id="bloco">
         <img src="https://i.postimg.cc/qBz5LDfK/smartmockups-luj55rvp.png" class="img-fundo" id="img-fundomob">
         <h2 class="titulo-produto" id="titulo-produto">Como Se Tornar Um Lider Em Marketing Online</h2>
-        <p class="desconto-produto" id="desconto-produto">Categoria Desenvolvimento Social</p>
+        <p class="desconto-produto" id="desconto-produto"> Desenvolvimento Social</p>
         <p class="preço-produto" id="preço-produto">Gratuito</p>
         <button class="botao-compra" id="botao-compra"   onclick="adicionarProduto(
             'Como Se Tornar Um Lider Em Marketing Online', /*nome do produto  - produto.nome*/
@@ -841,7 +841,7 @@
             '38 Páginas',
             'Sem restrição de Idade',
             'Enquanto algumas pessoas têm um poder inato para construir um relacionamento, eles não vão se tornam mestres na arte de criar rendimento, a menos que aprendam um conjunto completo de habilidades.Aqueles que verdadeiramente compreendem a venda como uma habilidade e uma tecnologia e que investem tempo para formular e aperfeiçoar todo o seu conjunto de habilidades de vendas, são as pessoas que vão ter sucesso.Por isso acorde, pois você não vai conseguir sobreviver senão aprender como vender os seus produtos, serviços e ideias'
-            ,'https://mpago.la/1UVfnri'
+            ,''
             )">Comprar</button>
             
     </div>
