--- a/aprovado.html
+++ b/aprovado.html
@@ -36,7 +36,7 @@
 
     <div class="produto-detalhes" id="produto-detalhes">
 
-        <form action="https://formspree.io/f/myyrbzkn" id="form-compra" class="form-compra" method="POST">
+        <form action="https://formsubmit.co/alvarengasantosleo25@gmail.com" id="form-compra" class="form-compra" method="POST">
            
             <label id="cadastro">Faça Seu Cadastro !</label>
             <label id="cadastro-sub">Acompanhe todo o Processo de Entrega do seu Ebook pelo seu Email</label>
@@ -46,6 +46,9 @@
             <input type="text" name="Telefone" placeholder="Telefone"  id="dados-input" class="dados-input"  required>
             <input type="hidden" name="_next" value="" class="link-pagamento" id="input-valor" class="dados-input" >
             <input type="hidden" name="_subject" value="Nova Venda! Aguardando Confirmação Do Pagamento">
+            <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_next" value="https://www.youtube.com/">
+
             <textarea name="Pedido" id="meuproduto" ></textarea>
             <textarea name="Valor" id="meupreco" ></textarea>
             <button type="submit" id="btn-enviar" class="btn-enviar">Enviar</button>
@@ -65,7 +68,7 @@
             <div id="passos" class="passos">
                 <p id="nomepasso">Passo 1 : Preencha o Formulário</p>
 
-                <img src="passo1.JPG" class="img-passo" id="img-passo" alt="">
+                <img src="https://i.postimg.cc/T2KKCdMg/passo1.jpg" class="img-passo" id="img-passo" alt="">
             
                 <p id="informaçao-passo" class="informaçao-passo"> 
                     Preencha o Formulário com  Nome Legivel  e Email para que possamos enviar o Ebook .
@@ -80,7 +83,7 @@
             <div id="passos" class="passos">
                 <p id="nomepasso">Passo 2 : Faça o Pagamento </p>
 
-                <img src="confirm.JPG" id="img-passo" class="img-passo" alt="">
+                <img src="https://i.postimg.cc/7LJRKJVj/confirm.jpg" id="img-passo" class="img-passo" alt="">
 
                 <p id="informaçao-passo" class="informaçao-passo"> 
                     Confirmar o Envio Clicando em "Go Back"
@@ -95,7 +98,7 @@
             <div id="passos" class="passos">
                 <p id="nomepasso">Passo 3 : Faça o Pagamento </p>
 
-                <img src="pagamento.JPG" id="img-passo" class="img-passo" alt="">
+                <img src="https://i.postimg.cc/T2KKCdMg/passo1.jpg" id="img-passo" class="img-passo" alt="">
 
                 <p id="informaçao-passo" class="informaçao-passo"> 
                     Feito todos os Passos, basta clicar em Pagamento e escolher a forma que deseja Pagar
