--- a/promoçao.html
+++ b/promoçao.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/style/header.css">
         <link rel="stylesheet" href="css/style/mainheader.css">
         <link rel="stylesheet" href="css/style/produtos.css">
-        <title>Loja Aweto -Todos</title>
+        <title>Loja Aweto -Promoção</title>
     
     </head>
 <body>
@@ -1276,80 +1276,79 @@
     </main>
 
     <article class="fundo-categoria">
-        <p id="texto-categoria">Todos os Livros</p>
+        <p id="texto-categoria">Promoção e Descontos</p>
     </article>
 
     <article class="fundo-produtos">
 
-        <div class="bloco" id="blocomob" >
-            <img src="5passoparaterexito.png" alt="" id="img-produto">
-            <p id="titulo-produto" > 5 passos para uma vida próspera</p>
-            <p id="autor-produto" >Leonardo Alvarenga</p>
-            <p id="preço-produto" >R$ 38,00</p>
+        <div class="bloco" id="blocomob" onclick="addproduto(
+            '5 Técnicas Para Turbinar A Sua Memória',
+            '04,90',
+            'https://i.postimg.cc/433wc4hk/turbinandosuamemoria.png',
+            'Para revisar um assunto, uma ferramenta muito útil é a aprendizagem espaçada. Este método envolve aprendizado por três blocos de 15 minutos, com dois intervalos de dez minutos entre o recurso atividades de distração. Isso reforça as ideias e exige que você as recupere novamente, exatamente como elas estariam prestes a deixar a memória de curto prazo. A razão pela qual isso parece funcionar tão bem é que permite invadir os mecanismos de aprendizado do cérebro, para que você ensaie fatos e ideias diferentes após o que o cérebro perceberá como um período de ausência.Isso tem o efeito de ensaiar o mesmo assunto várias vezes, em vez de apenas ensaiá-lo uma vez, mas por mais tempo. O resultado é mais religação do cérebro, mais atividade neuroquímica e potenciação mais rápida a longo prazo (uma palavra sofisticada que significa formação de novas conexões dentro do cérebro). A melhor maneira de fortalecer sua memória? Use todos esses métodos diferentes juntos. Aprenda a melhorar seu foco e sua memória de trabalho para melhorar a atenção às informações que você está tentando aprender'
+            ,'16 paginas',
+            '',
+            '',
+            '',
+            ''
+        )" >
+            <img src="https://i.postimg.cc/433wc4hk/turbinandosuamemoria.png" alt="" id="img-produto">
+            <p id="titulo-produto" >5 Técnicas Para Turbinar A Sua Memória</p>
+            <p id="autor-produto" >Desenvolvimento Social e Profissional</p>
+            <p id="preço-produto" >R$ 04,90</p>
         </div>
 
-        <div class="bloco" id="blocomob" >
-            <img src="5passoparaterexito.png" alt="" id="img-produto">
-            <p id="titulo-produto" > 5 passos para uma vida próspera</p>
-            <p id="autor-produto" >Leonardo Alvarenga</p>
-            <p id="preço-produto" >R$ 38,00</p>
+        <div class="bloco" id="blocomob" onclick="addproduto(
+                '5 Maneiras Para Melhorar Sua Auto Confiança',
+                '04,90',
+                'https://i.postimg.cc/g0GHWzKL/autoconfian-a.png',
+                'A vida é cheia de desafios e há muitas vezes em que é difícil manter a confiança. Quando isso acontecer, reserve um tempo do dia para sentar e fazer uma lista de todas as coisas em sua vida pelas quais você é grato e todas as coisas que você realizou. Coloque essa lista na porta da geladeira ou em outro lugar onde possa ser vista com facilidade e observe as listas sempre que sua autoconfiança começar a diminuir. Se você sente que tem baixa auto-estima, esses cinco métodos poderosos podem ajudá-lo a se sentir melhor sobre quem você é e para onde está indo.Não deixe que a falta de confiança continue a impedi-lo de alcançar seus objetivos e se tornar a pessoa que sempre sonhou em se tornar.Com um pouco de tempo e esforço, você pode construir sua auto-estima e confiança e começar a viver uma vida mais feliz e saudável.'
+                ,'16 paginas',
+                '',
+                '',
+                '',
+                ''
+            )" >
+                <img src="https://i.postimg.cc/g0GHWzKL/autoconfian-a.png" alt="" id="img-produto">
+                <p id="titulo-produto" >5 Maneiras Para Melhorar Sua Auto Confiança</p>
+                <p id="autor-produto" >Religião</p>
+                <p id="preço-produto" >R$ 04,90</p>
         </div>
 
-        <div class="bloco" id="blocomob" >
-            <img src="5passoparaterexito.png" alt="" id="img-produto">
-            <p id="titulo-produto" > 5 passos para uma vida próspera</p>
-            <p id="autor-produto" >Leonardo Alvarenga</p>
-            <p id="preço-produto" >R$ 38,00</p>
+        <div class="bloco" id="blocomob" onclick="addproduto(
+            'Fortalecimento Espiritual',
+            '04,90',
+            'https://i.postimg.cc/mgy6M6XM/fortalecimento.png',
+            'Capacitar o espírito é uma ordem muito alta. Ele requer alta disciplina, um quadro específico de espírito e muito sacrifício. Mas quando você atingir o estado, não há muito o que seria de desejar.'
+            ,'113 paginas',
+            '',
+            '',
+            '',
+            ''
+        )" >
+            <img src="https://i.postimg.cc/mgy6M6XM/fortalecimento.png" alt="" id="img-produto">
+            <p id="titulo-produto" >Fortalecimento Espiritual</p>
+            <p id="autor-produto" >Religião</p>
+            <p id="preço-produto" >R$ 04,90</p>
         </div>
 
-        <div class="bloco" id="blocomob" >
-            <img src="5passoparaterexito.png" alt="" id="img-produto">
-            <p id="titulo-produto" > 5 passos para uma vida próspera</p>
-            <p id="autor-produto" >Leonardo Alvarenga</p>
-            <p id="preço-produto" >R$ 38,00</p>
+        <div class="bloco" id="blocomob" onclick="addproduto(
+            'Como Se Tornar Um Lider Em Marketing Online',
+            '04,90',
+            'https://i.postimg.cc/qBz5LDfK/smartmockups-luj55rvp.png',
+            'Enquanto algumas pessoas têm um poder inato para construir um relacionamento, eles não vão se tornam mestres na arte de criar rendimento, a menos que aprendam um conjunto completo de habilidades.Aqueles que verdadeiramente compreendem a venda como uma habilidade e uma tecnologia e que investem tempo para formular e aperfeiçoar todo o seu conjunto de habilidades de vendas, são as pessoas que vão ter sucesso.Por isso acorde, pois você não vai conseguir sobreviver senão aprender como vender os seus produtos, serviços e ideias. '
+            ,'38 Paginas',
+            '',
+            '',
+            '',
+            ''
+        )" >
+            <img src="https://i.postimg.cc/qBz5LDfK/smartmockups-luj55rvp.png" alt="" id="img-produto">
+            <p id="titulo-produto" >Como Se Tornar Um Lider Em Marketing Online</p>
+            <p id="autor-produto" >Desenvolvimento Social e Profissional</p>
+            <p id="preço-produto" >R$ 04,90</p>
         </div>
-
-        <div class="bloco" id="blocomob" >
-            <img src="5passoparaterexito.png" alt="" id="img-produto">
-            <p id="titulo-produto" > 5 passos para uma vida próspera</p>
-            <p id="autor-produto" >Leonardo Alvarenga</p>
-            <p id="preço-produto" >R$ 38,00</p>
-        </div>
-
-        <div class="bloco" id="blocomob" >
-            <img src="5passoparaterexito.png" alt="" id="img-produto">
-            <p id="titulo-produto" > 5 passos para uma vida próspera</p>
-            <p id="autor-produto" >Leonardo Alvarenga</p>
-            <p id="preço-produto" >R$ 38,00</p>
-        </div>
-
-        <div class="bloco" id="blocomob" >
-            <img src="5passoparaterexito.png" alt="" id="img-produto">
-            <p id="titulo-produto" > 5 passos para uma vida próspera</p>
-            <p id="autor-produto" >Leonardo Alvarenga</p>
-            <p id="preço-produto" >R$ 38,00</p>
-        </div>
-
-        <div class="bloco" id="blocomob" >
-            <img src="5passoparaterexito.png" alt="" id="img-produto">
-            <p id="titulo-produto" > 5 passos para uma vida próspera</p>
-            <p id="autor-produto" >Leonardo Alvarenga</p>
-            <p id="preço-produto" >R$ 38,00</p>
-        </div>
-
-        <div class="bloco" id="blocomob" >
-            <img src="5passoparaterexito.png" alt="" id="img-produto">
-            <p id="titulo-produto" > 5 passos para uma vida próspera</p>
-            <p id="autor-produto" >Leonardo Alvarenga</p>
-            <p id="preço-produto" >R$ 38,00</p>
-        </div>
-
-        <div class="bloco" id="blocomob" >
-            <img src="5passoparaterexito.png" alt="" id="img-produto">
-            <p id="titulo-produto" > 5 passos para uma vida próspera</p>
-            <p id="autor-produto" >Leonardo Alvarenga</p>
-            <p id="preço-produto" >R$ 38,00</p>
-        </div>
+       
 
     </article>
 
