--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="shortcut icon" href="https://i.postimg.cc/8s8LnN55/aweto.png">
         <link rel="stylesheet" media="screen and (max-width:700px)" href="css/mob/cabeçalho.css">
-        <link rel="stylesheet" media="screen and (max-width:700px)" href="css/mob/main.css">
+        <link rel="stylesheet" media="screen and (max-width:700px)" href="css/mob/mainheadermob.css">
         <link rel="stylesheet" media="screen and (max-width:700px)" href="css/mob/produtos.css">
         <link rel="stylesheet" href="css/style/header.css">
-        <link rel="stylesheet" href="css/style/main.css">
+        <link rel="stylesheet" href="css/style/mainheader.css">
         <link rel="stylesheet" href="css/style/produtos.css">
         <title>Loja Aweto - Desenvolvimento </title>
     </head>
@@ -119,7 +119,7 @@
 
                 <!--BLOCO LOGOTIPO MOBILE-->
                 <article class="config-logo">
-                <img src="logoaweto.png" alt="" id="logomob">
+                <img src="https://i.postimg.cc/qvGzZXpy/logoaweto.png" alt="" id="logomob">
                 </article>
 
                 <!--BLOCO LUPA MOBILE-->
