--- a/unico.html
+++ b/unico.html
@@ -121,7 +121,7 @@
 
                 <!--BLOCO LOGOTIPO MOBILE-->
                 <article class="config-logo">
-                <img src="logoaweto.png" alt="" id="logomob">
+                <img src="https://i.postimg.cc/qvGzZXpy/logoaweto.png" alt="" id="logomob">
                 </article>
 
                 <!--BLOCO LUPA MOBILE-->
