--- a/index.html
+++ b/index.html
@@ -1358,7 +1358,7 @@
 
     <section class="section-primeiro">
 
-        <article class="fundo-categoria">
+        <article class="fundo-categoria" id="fundo-categoria">
             <p id="texto-categoria">Promoção</p>
             <a href="" id="vejamais"> Ver mais</a>
         </article>
@@ -1449,7 +1449,7 @@
 
     <section class="section-primeiro">
 
-        <article class="fundo-categoria">
+        <article class="fundo-categoria" id="fundo-categoria">
             <p id="texto-categoria">Desenvolvimento Social e Profissional</p>
             <a href="desenvolvimento.html" id="vejamais"> Ver mais</a>
         </article>
@@ -1613,7 +1613,7 @@
 
     <section class="section-primeiro">
 
-        <article class="fundo-categoria">
+        <article class="fundo-categoria" id="fundo-categoria">
             <p id="texto-categoria">Religião</p>
             <a href="religião.html" id="vejamais"> Ver mais</a>
         </article>
