--- a/todos.html
+++ b/todos.html
@@ -1356,7 +1356,7 @@
 
     </main>
 
-    <article class="fundo-categoria">
+    <article class="fundo-categoria" id="fundo-categoria">
         <p id="texto-categoria">Todos os Livros</p>
     </article>
 
