--- a/promoçao.html
+++ b/promoçao.html
@@ -1356,7 +1356,7 @@
 
     </main>
 
-    <article class="fundo-categoria">
+    <article class="fundo-categoria" id="fundo-categoria">
         <p id="texto-categoria">Promoção e Descontos</p>
     </article>
 
