--- a/venda.html
+++ b/venda.html
@@ -984,7 +984,7 @@
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_template" value="table">
             <input type="hidden" name="_subject" value="Novo Pedido !">
-            <input type="hidden" name="_next" value="https://sitefalcon.github.io/awetoofc/pagamento.html">
+            <input type="hidden" name="_next" value="https://lojainstitutoaweto.com.br/pagamento.html">
           
             <textarea name="Pedido" id="pedido-envio" ></textarea>
         
