--- a/unico.html
+++ b/unico.html
@@ -99,10 +99,10 @@
                     <div class="seçao-menu">
                         <div class="menu-catalogo">
                             <a href="index.html" id="pagina-menu">Início</a>
-                            <a href="religião.html" id="pagina-menu">Masculino</a>
-                            <a href="desenvolvimento.html" id="pagina-menu">Feminino</a>
-                            <a href="promoçao.html" id="pagina-menu">Infantil</a>
-                            <a href="todos.html" id="pagina-menu">Acessórios</a>
+                            <a href="religião.html" id="pagina-menu">Religião</a>
+                            <a href="desenvolvimento.html" id="pagina-menu">Desenvolvimento Social e Profissional</a>
+                            <a href="promoçao.html" id="pagina-menu">Promoção e Ofertas</a>
+                            <a href="todos.html" id="pagina-menu">Todos</a>
                         </div>
     
                         <div class="menu-redesociais">
@@ -123,7 +123,7 @@
                     <!--BLOCO LOGOTIPO MOBILE-->
                     <article class="config-logo">
                         <a href="index.html">
-                            <img src="" alt="" id="logomob">
+                            <img src="https://i.postimg.cc/qvGzZXpy/logoaweto.png" alt="" id="logomob">
                         </a>
                     </article>
     
